Fixed responsiveness on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,11 @@ body {
   color: #00fff7;
   cursor: pointer;
 }
+
+@media (max-width: 576px) {
+  .App .container {
+    height: 100%;
+    width: 100%;
+    margin-top: 50px;
+  }
+}
